data/derived/sp14/progs/unify/prog2186.ml.out
Characters 206-209:
  (carry2, carry2::dig) in
                   ^^^
Error: This expression has type int but an expression was expected of type
         int list
